# deriv-x

./: .gitignore  CMakeLists.txt  README.md
backend/include/: api_handler.hpp  option_pricing.hpp  volatility.hpp
backend/src/: api_handler.cpp  main.cpp  option_pricing.cpp  volatility.cpp
frontend/: index.html
scripts/: fetch_ohlcv.py  requirements.txt
